--- a/templates/dip/base.html
+++ b/templates/dip/base.html
@@ -25,6 +25,8 @@
 <a href="{% url 'home-page' %}">Home</a>
 <a href="{% url 'index-page' %}">Index</a>
 <a href="{% url 'article-index-page'%}">Articles</a>
+<a href="{% url 'new-columnist-page'%}">Add columnist</a>
+
 
 
 <hr>
