--- a/templates/dip/base.html
+++ b/templates/dip/base.html
@@ -8,6 +8,7 @@
 <style>
     body{
         background-color: darkslategrey;
+        color: floralwhite;
     }
     a {
         color: deeppink;
@@ -26,6 +27,8 @@
 <a href="{% url 'index-page' %}">Index</a>
 <a href="{% url 'article-index-page'%}">Articles</a>
 <a href="{% url 'new-columnist-page'%}">Add columnist</a>
+<a href="{% url 'register-page' %}">register</a>
+
 
 
 
