--- a/templates/dip/base.html
+++ b/templates/dip/base.html
@@ -27,7 +27,9 @@
 <a href="{% url 'index-page' %}">Index</a>
 <a href="{% url 'article-index-page'%}">Articles</a>
 <a href="{% url 'new-columnist-page'%}">Add columnist</a>
-<a href="{% url 'register-page' %}">register</a>
+<a href="{% url 'register-page' %}">Register</a>
+<a href="{% url 'user-list-page' %}">User List</a>
+
 
 
 
