--- a/templates/dip/base.html
+++ b/templates/dip/base.html
@@ -29,6 +29,8 @@
 <a href="{% url 'new-columnist-page'%}">Add columnist</a>
 <a href="{% url 'register-page' %}">Register</a>
 <a href="{% url 'user-list-page' %}">User List</a>
+<a href="{% url 'login-page' %}">Login</a>
+
 
 
 
