--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,1 +1,20 @@
-{{data}}
+{% extends 'dip/base.html' %}
+
+{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+</head>
+<body>
+    <form action="" method="POST">
+        {{form.as_p}}
+        {% csrf_token %}
+        <input type="submit" name="submit" value="Login">
+    </form>
+</body>
+</html>
+{% endblock %}
